# wrf-skill

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: tmax_validation.yaml
docs/: example_run_v1.0.md  example_run_v1.1.md  release_v1.0.md  release_v1.1.1.md  v1.1_feature_guide_en.md  v1.1_feature_guide_zh.md  v1.1_update_report_en.md  v1.1_update_report_zh.md
docs/superpowers/specs/: 2026-06-29-wrf-score-tool-design.md
release-assets/v1.1.1/: wrf_learning-1.1.1-py3-none-any.whl
reports/: wrf_tmax_evaluation_report.md
reports/2020_tmax/: wrf_tmax_evaluation_report.md
reports/lw4-sw2/: wrf_tmax_evaluation_report.md
reports/lw4-sw4/: code_review_literature_assessment.md  wrf_tmax_evaluation_report.md
reports/tmax_2020/: wrf_tmax_evaluation_report.md
scripts/: run_tmax_evaluation.ps1  run_tmax_evaluation_2020.ps1  run_tmax_evaluation_lw4_sw2.ps1  run_tmax_evaluation_lw4_sw4.ps1  run_wrf_score.ps1
src/wrf_eval/: __init__.py  batch.py  cli.py  compare_schemes.py  config.py  metrics.py  observed.py  pipeline.py  sampling.py  wrf_diag.py  wrf_hourly.py
tests/: test_batch.py  test_boundary_filter.py  test_cli.py  test_compare_schemes.py  test_config.py  test_matching.py  test_metrics.py  test_observed.py  test_public_docs.py  test_report.py  test_sampling.py  test_validation_window.py  test_wrf_diag.py  test_wrf_hourly.py  test_wrf_merge.py  test_wrf_time.py
