[project]
name = "wrf-learning"
version = "1.1.1"
description = "WRF Tmax station verification and radiation scheme comparison utilities."
requires-python = ">=3.9"
dependencies = [
  "geopandas",
  "netCDF4",
  "numpy",
  "pandas",
  "pyyaml",
  "shapely",
]

[project.scripts]
wrf-score = "wrf_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
